# LUA_C_MIXED

./: CMakeLists.txt  README.md  main.c  project_version.h  project_version.h.in
c_to_lua/: CMakeLists.txt  build.sh  lua_test.lua  main.c
lua-5.4.4/src/: CMakeLists.txt  lua  luac  luaconf.h
lua_to_c/: CMakeLists.txt  build.sh  funtion_test.c  lua_main.lua
